--- a/GuestBook_MVC/GuestBook_MVC.csproj
+++ b/GuestBook_MVC/GuestBook_MVC.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Sodium.Core" Version="1.3.5" />
   </ItemGroup>
 
 </Project>
